// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressIndicator component Should render progress indicator - size large 1`] = `
<View
  size={64}
  style={
    Object {
      "height": 64,
      "width": 64,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      size={64}
      style={
        Object {
          "height": 64,
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 64,
        }
      }
    >
      <View
        size={64}
        style={
          Object {
            "height": 32,
            "overflow": "hidden",
            "width": 64,
          }
        }
      >
        <View
          size={64}
          style={
            Object {
              "borderColor": "#f4ab34",
              "borderRadius": 32,
              "borderWidth": 6.4,
              "height": 64,
              "width": 64,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ProgressIndicator component Should render progress indicator - size semi 1`] = `
<View
  size={32}
  style={
    Object {
      "height": 32,
      "width": 32,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      size={32}
      style={
        Object {
          "height": 32,
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 32,
        }
      }
    >
      <View
        size={32}
        style={
          Object {
            "height": 16,
            "overflow": "hidden",
            "width": 32,
          }
        }
      >
        <View
          size={32}
          style={
            Object {
              "borderColor": "#f4ab34",
              "borderRadius": 16,
              "borderWidth": 3.2,
              "height": 32,
              "width": 32,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ProgressIndicator component Should render progress indicator - size standard 1`] = `
<View
  size={24}
  style={
    Object {
      "height": 24,
      "width": 24,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      size={24}
      style={
        Object {
          "height": 24,
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 24,
        }
      }
    >
      <View
        size={24}
        style={
          Object {
            "height": 12,
            "overflow": "hidden",
            "width": 24,
          }
        }
      >
        <View
          size={24}
          style={
            Object {
              "borderColor": "#f4ab34",
              "borderRadius": 12,
              "borderWidth": 2.4,
              "height": 24,
              "width": 24,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ProgressIndicator component Should render progress indicator correctly 1`] = `
<View
  size={48}
  style={
    Object {
      "height": 48,
      "width": 48,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      size={48}
      style={
        Object {
          "height": 48,
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 48,
        }
      }
    >
      <View
        size={48}
        style={
          Object {
            "height": 24,
            "overflow": "hidden",
            "width": 48,
          }
        }
      >
        <View
          size={48}
          style={
            Object {
              "borderColor": "#f4ab34",
              "borderRadius": 24,
              "borderWidth": 4.8,
              "height": 48,
              "width": 48,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
